# wave

./: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: entity.rs  init.rs  main.rs
src-tauri/src/command/: mod.rs  writeCmds.rs
src/components/common/W-Editor/: W-Editor.vue  menu-bar.vue  menu-item.vue
src/locale/: lang.js
src/locale/langs/: zh.js
