[package]
name = "wave"
version = "0.1.0"
description = "A web novel write App"
authors = ["mtaech"]
license = ""
repository = "https://github.com/mtaech/wave"
default-run = "wave"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
tauri = { version = "1.0.0-rc.5", features = ["api-all"] }
log = "0.4.14"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
fern = "0.6.0"
tokio = { version = "1.17.0", features = ["full"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "sqlite", "sqlx-macros", "json", "chrono"] }
once_cell = "1.10.0"

[features]
# by default Tauri runs in production mode"1.17.0"
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
